fix add bananas

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       }
 
       function addBananas() {
-          let addValue = document.getElementById('removeBananas').value;
-          let addNumber = parseInt(document.getElementById('removeBananas').value);
+          let addValue = document.getElementById('addBananas').value;
+          let addNumber = parseInt(document.getElementById('addBananas').value);
 
           if (isNaN(addNumber) || addValue < 0) {
               showError('Please enter a valid positive number to add.');
