--- a/index.html
+++ b/index.html
@@ -1,43 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Counter</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-            background-image: url('bananas.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-        input {
-            margin: 5px;
-        }
-        .error {
-            color: red;
-            margin-top: 10px;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        font-size: 4rem;
+        text-align: center;
+        margin-top: 50px;
+      }
+      input,
+      button {
+        margin: 1rem;
+        font-size: 3rem;
+        text-align: left;
+      }
+      input {
+        width: 40rem;
+      }
+      .error {
+        color: red;
+        margin-top: 10px;
+      }
+      .background {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        opacity: 0.77;
+        background-image: url("bananas.webp");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+      .content {
+        position: relative;
+        z-index: 1;
+        background-color: rgba(255, 255, 255, 0.85);
+        display: inline-block;
+        padding: 2rem;
+        border-radius: 10px;
+        text-align: left;
+      }
+      .resetButton {
+        margin-top: 4rem;
+        position: relative;
+        left: 25rem;
+      }
     </style>
-</head>
-<body>
-    <h1>Banana Counter</h1>
-    <p>Current number of bananas: <span id="bananaCount">0</span></p>
+  </head>
+  <body>
+    <div class="background"></div>
+    <div class="content">
+      <h1>Banana Counter</h1>
+      <p>Current number of bananas: <span id="bananaCount">0</span></p>
 
-    <input id="addBananas" placeholder="Add bananas">
-    <button onclick="addBananas()">Add</button>
-    <br>
+      <input id="addBananas" placeholder="Add bananas" />
+      <button onclick="addBananas()">Add</button>
+      <br />
 
-    <input type="number" id="removeBananas" placeholder="Remove bananas" min="0">
-    <button onclick="removeBananas()">Remove</button>
-    <br>
+      <input
+        type="number"
+        id="removeBananas"
+        placeholder="Remove bananas"
+        min="0"
+      />
+      <button onclick="removeBananas()">Remove</button>
+      <br />
 
-    <button onclick="reset()">Reset</button>
+      <button class="resetButton" onclick="reset()">Reset</button>
 
-    <p id="error" class="error"></p>
+      <p id="error" class="error"></p>
+    </div>
 
     <script>
       let bananas = 0;
@@ -49,46 +87,48 @@
       }
 
       function updateBananaCount() {
-          document.getElementById('bananaCount').textContent = bananas;
+        document.getElementById("bananaCount").textContent = bananas;
       }
 
       function showError(message) {
-          document.getElementById('error').textContent = message;
+        document.getElementById("error").textContent = message;
       }
 
       function clearError() {
-          document.getElementById('error').textContent = '';
+        document.getElementById("error").textContent = "";
       }
 
       function addBananas() {
-          let addValue = document.getElementById('addBananas').value;
-          let addNumber = parseInt(document.getElementById('addBananas').value);
+        let addValue = document.getElementById("addBananas").value;
+        let addNumber = parseInt(document.getElementById("addBananas").value);
 
-          if (isNaN(addNumber) || addValue < 0) {
-              showError('Please enter a valid positive number to add.');
-          } else {
-              bananas += addNumber;
-              updateBananaCount();
-              document.getElementById('addBananas').value = '';
-              clearError();
-          }
+        if (isNaN(addNumber) || addNumber < 0) {
+          showError("Please enter a valid positive number to add.");
+        } else {
+          bananas += addNumber;
+          updateBananaCount();
+          document.getElementById("addBananas").value = "";
+          clearError();
+        }
       }
 
       function removeBananas() {
-          let removeValue = document.getElementById('removeBananas').value;
-          let removeNumber = parseInt(document.getElementById('removeBananas').value);
+        let removeValue = document.getElementById("removeBananas").value;
+        let removeNumber = parseInt(
+          document.getElementById("removeBananas").value,
+        );
 
-          if (isNaN(removeNumber) || removeValue < 0) {
-              showError('Please enter a valid positive number to remove.');
-          } else if (removeValue > bananas) {
-              showError('Not enough bananas in storage to remove.');
-          } else {
-              bananas -= removeNumber;
-              updateBananaCount();
-              document.getElementById('removeBananas').value = '';
-              clearError();
-          }
+        if (isNaN(removeNumber) || removeValue < 0) {
+          showError("Please enter a valid positive number to remove.");
+        } else if (removeValue > bananas) {
+          showError("Not enough bananas in storage to remove.");
+        } else {
+          bananas -= removeNumber;
+          updateBananaCount();
+          document.elementById("removeBananas").value = "";
+          clearError();
+        }
       }
     </script>
-</body>
+  </body>
 </html>
