fix clear on remove

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         } else {
           bananas -= removeNumber;
           updateBananaCount();
-          document.elementById("removeBananas").value = "";
+          document.getElementById("removeBananas").value = "";
           clearError();
         }
       }
